# SCP

./: .gitignore  CMakeLists.txt  README.md
build_support/: cpplint.py  package.sh
demo/: hello.s  hello.scpl
docs/: LEXER_README.md  lexer.md  ll1_grammar.txt  parser.md  slr_grammar.txt  token_with_re.txt
include/: dfa.h  lexer.h  ll1_parser.h  token.h
include/cgen/: code_generator.h  runtime_environment.h
include/constant/: AST_constant.h  alphabet.h  error_messages.h
include/core/: ast.h  symbol_table.h  token.h  type.h
include/lexer/: dfa.h  lexer.h
include/parser/: ll1_parser.h  slr_parser.h
include/semant/: type_checker.h
src/: CMakeLists.txt  cgen.cpp  dfa.cc  lexer.cc  lexer.cpp  ll1_parser.cc  parser.cpp  scpc.cpp
src/cgen/: CMakeLists.txt  code_generator.cpp  runtime_environment.cpp
src/core/: CMakeLists.txt  ast.cpp  symbol_table.cpp  token.cpp  type.cpp
src/lexer/: CMakeLists.txt  dfa.cpp  lexer.cpp
src/parser/: CMakeLists.txt  ll1_parser.cpp  slr_parser.cpp
src/semant/: CMakeLists.txt  type_checker.cpp
src/tools/: CMakeLists.txt  lexer.cpp
test/: CMakeLists.txt  code_generator_test.cpp  dfa_test.cpp  lexer_extended_test.cpp  lexer_stream_test.cpp  lexer_test.cpp  ll1_parser_test.cpp  parser_test.cpp  slr_parser_test.cpp  type_checker_test.cpp
test/data/: expression.scpl  invalid_tokens.scpl  number_variations.scpl  sample_input_clean.scpl
test/data/ast/: empty.ast  expression.ast  left_associative.ast  mixed_string.ast  multiple_statements.ast  operator_precedence.ast  parentheses.ast  real_code.ast  simple_addition.ast  string.ast
test/data/code/: cgen_arithmetic.scpl  cgen_basic_number.scpl  cgen_basic_string.scpl  cgen_concat_paren_repeat.scpl  cgen_long_chain_concat.scpl  cgen_mix_concat_repeat_precedence.scpl  cgen_multiple_vars.scpl  cgen_nested_parentheses.scpl  cgen_operator_precedence2.scpl  cgen_repeat_computed_count.scpl  cgen_string_concat.scpl  cgen_string_multi_concat.scpl  cgen_string_repeat.scpl  cgen_string_repeat_large.scpl  error_io_1.scpl  error_io_2.scpl  error_io_3.scpl  error_missing_expression.scpl  error_unbalanced_parens.scpl  escape_sequences.scpl  heavy_test.scpl  identifier_variations.scpl  invalid_escape.scpl  iostream.scpl  left_associative.scpl  mixed_escape.scpl  mixed_string.scpl  multiple_statements.scpl  operator_precedence.scpl  parentheses.scpl  simple_addition.scpl  simple_identifier.scpl  string.scpl  type_complex_valid.scpl  type_error_add_number_string.scpl  type_error_add_string_number.scpl  type_error_multiply_strings.scpl  type_error_reassignment.scpl  type_error_undefined_variable.scpl  type_valid_mixed.scpl  (+3 more)
test/data/output/: cgen_concat_paren_repeat.txt  cgen_long_chain_concat.txt  cgen_mix_concat_repeat_precedence.txt  cgen_string_multi_concat.txt
test/data/token/: empty.token  escape_sequences.token  expression.token  identifier_variations.token  invalid_escape.token  invalid_tokens.token  left_associative.token  mixed_escape.token  mixed_tokens.token  multiple_statements.token  number_variations.token  operator_precedence.token  parentheses.token  real_code.token  simple_addition.token  simple_identifier.token  simple_number.token  string.token  whitespace_only.token  whitespace_variations.token
